dist/1.0/bin/sample/retrieveUnpackaged/objects/Order_Bundle__c.object
<CustomObject>
    <description>Service Bundles created from Order</description>
    <fields>
        <fullName>Bundle_Type__c</fullName>
        <formula>Service_Bundle__r.CBundleType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_ID__c</fullName>
        <formula>Service_Bundle__r.Circuit_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Circuit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Bundle_Name__c</fullName>
        <formula>Service_Bundle__r.LocalBundleName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Bundle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Reference__c</fullName>
        <formula>Service_Bundle__r.LocalReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Relation to Order</description>
        <inlineHelpText>Relation to Order</inlineHelpText>
        <label>Order</label>
        <referenceTo>COrder__c</referenceTo>
        <relationshipLabel>Order Bundles</relationshipLabel>
        <relationshipName>Order_Bundles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Related Service Bundle</description>
        <inlineHelpText>Related Service Bundle</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Order Bundles</relationshipLabel>
        <relationshipName>Order_Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Service_Bundle__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Order Bundle</label>
    <nameField>
        <displayFormat>OBU{000000000}</displayFormat>
        <label>Order Bundle</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>